// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox test should render 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c1 > :not([hidden]) ~ :not([hidden]) {
  margin-left: 0.5rem;
}

.c2 {
  position: relative;
  width: 1rem;
  height: 1rem;
  border: 1px solid hsl(0,0%,100%);
  background: hsl(0,0%,100%);
  overflow: hidden;
  border: 1px solid hsl(240,5.9%,10%);
  box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1),0 1px 2px -1px rgb(0 0 0 / 0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 0.5rem;
  border-radius: 0.25rem;
  opacity: 1;
}

.c5 {
  background: hsl(0,0%,100%);
  width: 100%;
  height: 100%;
  position: absolute;
}

input:checked ~ .c4 {
  background: hsl(240,5.9%,10%);
}

.c0:hover input:checked ~ .c4 {
  background: hsl(240,5.9%,10%);
}

.c7 svg {
  color: transparent;
  z-index: 10;
  position: relative;
}

.c0 input:checked ~ .c6 svg {
  color: hsl(0,0%,100%);
}

.c0:hover .c6 svg {
  color: hsl(240,5.9%,10%);
}

.c3 {
  display: none;
}

<div>
  <label
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <input
        class="c3"
        type="checkbox"
      />
      <div
        class="c4 c5"
      />
      <div
        class="c6 c7"
      >
        <svg
          aria-hidden="true"
          data-slot="icon"
          fill="none"
          height="12"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m4.5 12.75 6 6 9-13.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox test should render with disabled classes 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
}

.c1 > :not([hidden]) ~ :not([hidden]) {
  margin-left: 0.5rem;
}

.c2 {
  position: relative;
  width: 1rem;
  height: 1rem;
  border: 1px solid hsl(0,0%,100%);
  background: hsl(0,0%,100%);
  overflow: hidden;
  border: 1px solid hsl(240,5.9%,10%);
  box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1),0 1px 2px -1px rgb(0 0 0 / 0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 0.5rem;
  border-radius: 0.25rem;
  opacity: 0.5;
}

.c5 {
  background: hsl(0,0%,100%);
  width: 100%;
  height: 100%;
  position: absolute;
}

input:checked ~ .c4 {
  background: hsl(240,5.9%,10%);
}

.c0:hover input:checked ~ .c4 {
  background: hsl(240,5.9%,10%);
}

.c7 svg {
  color: transparent;
  z-index: 10;
  position: relative;
}

.c0 input:checked ~ .c6 svg {
  color: hsl(0,0%,100%);
}

.c3 {
  display: none;
}

<div>
  <label
    class="c0 c1"
    disabled=""
  >
    <div
      class="c2"
      disabled=""
    >
      <input
        class="c3"
        disabled=""
        type="checkbox"
      />
      <div
        class="c4 c5"
      />
      <div
        class="c6 c7"
        disabled=""
      >
        <svg
          aria-hidden="true"
          data-slot="icon"
          fill="none"
          height="12"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m4.5 12.75 6 6 9-13.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;
